--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -44,4 +44,9 @@ footer
         color: #ffffff
         &:hover
             color: #bdb7b7
-    
+        &:first-child
+            padding-right: 30px    
+
+#mapid
+    width: 100%
+    height: 100%
